mini_php_jorge_modify/parser.out
Created by PLY version 3.8 (http://www.dabeaz.com/ply)

Unused terminals:

    DO
    ASSIARRAY
    WHILE
    NEW
    DOT
    ENDSWITCH
    PROTECTED
    PRIVATED
    CONTINUE
    ENDFOR
    ARRAY
    CLASS
    STRING
    MODULE
    AS
    EXTENDS
    PLUSASSI
    AND
    MINUSASSI
    ENDWHILE
    BOOLEQUAL
    INCLUDEDOLAR
    DOTASSI
    PUBLIC
    HASHTAG
    OR

Grammar

Rule 0     S' -> program
Rule 1     program -> declaration_list
Rule 2     declaration_list -> declaration_list declaration
Rule 3     declaration_list -> declaration
Rule 4     declaration -> var_declaration
Rule 5     declaration -> fun_declaration
Rule 6     var_declaration -> type_specifier var_declaration2 SEMICOLON
Rule 7     var_declaration -> type_specifier ID LBRACKET NUMBER RBRACKET SEMICOLON
Rule 8     var_declaration2 -> ID COMMA var_declaration2
Rule 9     var_declaration2 -> ID
Rule 10    var_declaration2 -> ID ASSIGNMENT NUMBER COMMA var_declaration2
Rule 11    var_declaration2 -> ID ASSIGNMENT NUMBER
Rule 12    var_declaration2 -> TIMES ID COMMA var_declaration2
Rule 13    var_declaration2 -> TIMES ID
Rule 14    var_declaration2 -> ID ASSIGNMENT ID COMMA var_declaration2
Rule 15    var_declaration2 -> ID ASSIGNMENT ID
Rule 16    var_declaration2 -> COMMA
Rule 17    var_declaration2 -> TIMES TIMES ID
Rule 18    var_declaration2 -> TIMES TIMES ID COMMA var_declaration2
Rule 19    var_declaration2 -> AMPERSANT ID
Rule 20    var_declaration2 -> AMPERSANT ID COMMA var_declaration2
Rule 21    type_specifier -> STATIC
Rule 22    type_specifier -> CONST
Rule 23    type_specifier -> TBOOL
Rule 24    type_specifier -> FBOOL
Rule 25    type_specifier -> VOID
Rule 26    non_type_specifier -> ECHO
Rule 27    non_type_specifier -> GLOBAL
Rule 28    non_type_specifier -> PRINT
Rule 29    non_type_specifier -> STRLEN
Rule 30    non_type_specifier -> FUNCTION
Rule 31    non_type_specifier -> NULL
Rule 32    non_type_specifier -> SUBSTR
Rule 33    non_type_specifier -> STRTOUPPER
Rule 34    non_type_specifier -> STRTOLOWER
Rule 35    non_type_specifier -> STRPOS
Rule 36    non_type_specifier -> PHP
Rule 37    non_type_specifier -> RETURN
Rule 38    fun_declaration -> type_specifier ID LPAREN params RPAREN compount_stmt
Rule 39    fun_declaration -> ID LPAREN params non_type_specifier RPAREN compount_stmt
Rule 40    params -> param_list
Rule 41    params -> VOID
Rule 42    param_list -> param_list COMMA param
Rule 43    param_list -> param
Rule 44    param_list -> empty
Rule 45    param -> type_specifier ID
Rule 46    param -> type_specifier ID LBRACKET RBRACKET
Rule 47    compount_stmt -> LBLOCK local_declarations statement_list RBLOCK
Rule 48    local_declarations -> local_declarations var_declaration
Rule 49    local_declarations -> empty
Rule 50    statement_list -> statement_list statement
Rule 51    statement_list -> empty
Rule 52    statement -> expression_stmt
Rule 53    statement -> compount_stmt
Rule 54    statement -> selection_stmt
Rule 55    statement -> iteration_stmt
Rule 56    statement -> return_stmt
Rule 57    expression_stmt -> expression SEMICOLON
Rule 58    expression_stmt -> SEMICOLON
Rule 59    selection_stmt -> IF LPAREN statement RPAREN statement
Rule 60    selection_stmt -> IF LPAREN expression RPAREN statement ELSE statement
Rule 61    selection_stmt -> SWITCH LPAREN var RPAREN statement
Rule 62    selection_stmt -> CASE NUMBER COLON statement BREAK SEMICOLON
Rule 63    selection_stmt -> DEFAULT COLON statement BREAK SEMICOLON
Rule 64    iteration_stmt -> FOR LPAREN var_declaration2 SEMICOLON expression SEMICOLON additive_expression RPAREN statement
Rule 65    iteration_stmt -> FOREACH LPAREN expression RPAREN statement
Rule 66    iteration_stmt -> FOREACH LPAREN var_declaration RPAREN ASSIGNMENT statement ENDFOREACH
Rule 67    return_stmt -> RETURN SEMICOLON
Rule 68    return_stmt -> RETURN expression SEMICOLON
Rule 69    expression -> var ASSIGNMENT expression
Rule 70    expression -> simple_expression
Rule 71    expression -> var ASSIGNMENT AMPERSANT ID
Rule 72    var -> ID
Rule 73    var -> ID LBRACKET expression RBRACKET
Rule 74    simple_expression -> additive_expression relop additive_expression
Rule 75    simple_expression -> additive_expression
Rule 76    relop -> LESS
Rule 77    relop -> LESSEQUAL
Rule 78    relop -> GREATER
Rule 79    relop -> GREATEREQUAL
Rule 80    relop -> DISTINTEQUAL
Rule 81    relop -> DISTINT
Rule 82    relop -> ISEQUAL
Rule 83    additive_expression -> additive_expression addop term
Rule 84    additive_expression -> term
Rule 85    additive_expression -> term MINUSMINUS
Rule 86    additive_expression -> term PLUSPLUS
Rule 87    addop -> PLUS
Rule 88    addop -> MINUS
Rule 89    term -> term mulop factor
Rule 90    term -> factor
Rule 91    mulop -> TIMES
Rule 92    mulop -> DIVIDE
Rule 93    factor -> LPAREN expression RPAREN
Rule 94    factor -> var
Rule 95    factor -> call
Rule 96    factor -> NUMBER
Rule 97    call -> ID LPAREN args RPAREN
Rule 98    args -> args_list
Rule 99    args -> empty
Rule 100   args_list -> args_list COMMA expression
Rule 101   args_list -> expression
Rule 102   empty -> <empty>

Terminals, with rules where they appear

AMPERSANT            : 19 20 71
AND                  : 
ARRAY                : 
AS                   : 
ASSIARRAY            : 
ASSIGNMENT           : 10 11 14 15 66 69 71
BOOLEQUAL            : 
BREAK                : 62 63
CASE                 : 62
CLASS                : 
COLON                : 62 63
COMMA                : 8 10 12 14 16 18 20 42 100
CONST                : 22
CONTINUE             : 
DEFAULT              : 63
DISTINT              : 81
DISTINTEQUAL         : 80
DIVIDE               : 92
DO                   : 
DOT                  : 
DOTASSI              : 
ECHO                 : 26
ELSE                 : 60
ENDFOR               : 
ENDFOREACH           : 66
ENDSWITCH            : 
ENDWHILE             : 
EXTENDS              : 
FBOOL                : 24
FOR                  : 64
FOREACH              : 65 66
FUNCTION             : 30
GLOBAL               : 27
GREATER              : 78
GREATEREQUAL         : 79
HASHTAG              : 
ID                   : 7 8 9 10 11 12 13 14 14 15 15 17 18 19 20 38 39 45 46 71 72 73 97
IF                   : 59 60
INCLUDEDOLAR         : 
ISEQUAL              : 82
LBLOCK               : 47
LBRACKET             : 7 46 73
LESS                 : 76
LESSEQUAL            : 77
LPAREN               : 38 39 59 60 61 64 65 66 93 97
MINUS                : 88
MINUSASSI            : 
MINUSMINUS           : 85
MODULE               : 
NEW                  : 
NULL                 : 31
NUMBER               : 7 10 11 62 96
OR                   : 
PHP                  : 36
PLUS                 : 87
PLUSASSI             : 
PLUSPLUS             : 86
PRINT                : 28
PRIVATED             : 
PROTECTED            : 
PUBLIC               : 
RBLOCK               : 47
RBRACKET             : 7 46 73
RETURN               : 37 67 68
RPAREN               : 38 39 59 60 61 64 65 66 93 97
SEMICOLON            : 6 7 57 58 62 63 64 64 67 68
STATIC               : 21
STRING               : 
STRLEN               : 29
STRPOS               : 35
STRTOLOWER           : 34
STRTOUPPER           : 33
SUBSTR               : 32
SWITCH               : 61
TBOOL                : 23
TIMES                : 12 13 17 17 18 18 91
VOID                 : 25 41
WHILE                : 
error                : 

Nonterminals, with rules where they appear

additive_expression  : 64 74 74 75 83
addop                : 83
args                 : 97
args_list            : 98 100
call                 : 95
compount_stmt        : 38 39 53
declaration          : 2 3
declaration_list     : 1 2
empty                : 44 49 51 99
expression           : 57 60 64 65 68 69 73 93 100 101
expression_stmt      : 52
factor               : 89 90
fun_declaration      : 5
iteration_stmt       : 55
local_declarations   : 47 48
mulop                : 89
non_type_specifier   : 39
param                : 42 43
param_list           : 40 42
params               : 38 39
program              : 0
relop                : 74
return_stmt          : 56
selection_stmt       : 54
simple_expression    : 70
statement            : 50 59 59 60 60 61 62 63 64 65 66
statement_list       : 47 50
term                 : 83 84 85 86 89
type_specifier       : 6 7 38 45 46
var                  : 61 69 71 94
var_declaration      : 4 48 66
var_declaration2     : 6 8 10 12 14 18 20 64

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . declaration_list
    (2) declaration_list -> . declaration_list declaration
    (3) declaration_list -> . declaration
    (4) declaration -> . var_declaration
    (5) declaration -> . fun_declaration
    (6) var_declaration -> . type_specifier var_declaration2 SEMICOLON
    (7) var_declaration -> . type_specifier ID LBRACKET NUMBER RBRACKET SEMICOLON
    (38) fun_declaration -> . type_specifier ID LPAREN params RPAREN compount_stmt
    (39) fun_declaration -> . ID LPAREN params non_type_specifier RPAREN compount_stmt
    (21) type_specifier -> . STATIC
    (22) type_specifier -> . CONST
    (23) type_specifier -> . TBOOL
    (24) type_specifier -> . FBOOL
    (25) type_specifier -> . VOID

    ID              shift and go to state 10
    STATIC          shift and go to state 3
    CONST           shift and go to state 1
    TBOOL           shift and go to state 8
    FBOOL           shift and go to state 4
    VOID            shift and go to state 2

    type_specifier                 shift and go to state 5
    fun_declaration                shift and go to state 12
    declaration_list               shift and go to state 11
    var_declaration                shift and go to state 6
    program                        shift and go to state 7
    declaration                    shift and go to state 9

state 1

    (22) type_specifier -> CONST .

    ID              reduce using rule 22 (type_specifier -> CONST .)
    TIMES           reduce using rule 22 (type_specifier -> CONST .)
    COMMA           reduce using rule 22 (type_specifier -> CONST .)
    AMPERSANT       reduce using rule 22 (type_specifier -> CONST .)


state 2

    (25) type_specifier -> VOID .

    ID              reduce using rule 25 (type_specifier -> VOID .)
    TIMES           reduce using rule 25 (type_specifier -> VOID .)
    COMMA           reduce using rule 25 (type_specifier -> VOID .)
    AMPERSANT       reduce using rule 25 (type_specifier -> VOID .)


state 3

    (21) type_specifier -> STATIC .

    ID              reduce using rule 21 (type_specifier -> STATIC .)
    TIMES           reduce using rule 21 (type_specifier -> STATIC .)
    COMMA           reduce using rule 21 (type_specifier -> STATIC .)
    AMPERSANT       reduce using rule 21 (type_specifier -> STATIC .)


state 4

    (24) type_specifier -> FBOOL .

    ID              reduce using rule 24 (type_specifier -> FBOOL .)
    TIMES           reduce using rule 24 (type_specifier -> FBOOL .)
    COMMA           reduce using rule 24 (type_specifier -> FBOOL .)
    AMPERSANT       reduce using rule 24 (type_specifier -> FBOOL .)


state 5

    (6) var_declaration -> type_specifier . var_declaration2 SEMICOLON
    (7) var_declaration -> type_specifier . ID LBRACKET NUMBER RBRACKET SEMICOLON
    (38) fun_declaration -> type_specifier . ID LPAREN params RPAREN compount_stmt
    (8) var_declaration2 -> . ID COMMA var_declaration2
    (9) var_declaration2 -> . ID
    (10) var_declaration2 -> . ID ASSIGNMENT NUMBER COMMA var_declaration2
    (11) var_declaration2 -> . ID ASSIGNMENT NUMBER
    (12) var_declaration2 -> . TIMES ID COMMA var_declaration2
    (13) var_declaration2 -> . TIMES ID
    (14) var_declaration2 -> . ID ASSIGNMENT ID COMMA var_declaration2
    (15) var_declaration2 -> . ID ASSIGNMENT ID
    (16) var_declaration2 -> . COMMA
    (17) var_declaration2 -> . TIMES TIMES ID
    (18) var_declaration2 -> . TIMES TIMES ID COMMA var_declaration2
    (19) var_declaration2 -> . AMPERSANT ID
    (20) var_declaration2 -> . AMPERSANT ID COMMA var_declaration2

    ID              shift and go to state 16
    TIMES           shift and go to state 15
    COMMA           shift and go to state 14
    AMPERSANT       shift and go to state 17

    var_declaration2               shift and go to state 13

state 6

    (4) declaration -> var_declaration .

    ID              reduce using rule 4 (declaration -> var_declaration .)
    STATIC          reduce using rule 4 (declaration -> var_declaration .)
    CONST           reduce using rule 4 (declaration -> var_declaration .)
    TBOOL           reduce using rule 4 (declaration -> var_declaration .)
    FBOOL           reduce using rule 4 (declaration -> var_declaration .)
    VOID            reduce using rule 4 (declaration -> var_declaration .)
    $end            reduce using rule 4 (declaration -> var_declaration .)


state 7

    (0) S' -> program .



state 8

    (23) type_specifier -> TBOOL .

    ID              reduce using rule 23 (type_specifier -> TBOOL .)
    TIMES           reduce using rule 23 (type_specifier -> TBOOL .)
    COMMA           reduce using rule 23 (type_specifier -> TBOOL .)
    AMPERSANT       reduce using rule 23 (type_specifier -> TBOOL .)


state 9

    (3) declaration_list -> declaration .

    ID              reduce using rule 3 (declaration_list -> declaration .)
    STATIC          reduce using rule 3 (declaration_list -> declaration .)
    CONST           reduce using rule 3 (declaration_list -> declaration .)
    TBOOL           reduce using rule 3 (declaration_list -> declaration .)
    FBOOL           reduce using rule 3 (declaration_list -> declaration .)
    VOID            reduce using rule 3 (declaration_list -> declaration .)
    $end            reduce using rule 3 (declaration_list -> declaration .)


state 10

    (39) fun_declaration -> ID . LPAREN params non_type_specifier RPAREN compount_stmt

    LPAREN          shift and go to state 18


state 11

    (1) program -> declaration_list .
    (2) declaration_list -> declaration_list . declaration
    (4) declaration -> . var_declaration
    (5) declaration -> . fun_declaration
    (6) var_declaration -> . type_specifier var_declaration2 SEMICOLON
    (7) var_declaration -> . type_specifier ID LBRACKET NUMBER RBRACKET SEMICOLON
    (38) fun_declaration -> . type_specifier ID LPAREN params RPAREN compount_stmt
    (39) fun_declaration -> . ID LPAREN params non_type_specifier RPAREN compount_stmt
    (21) type_specifier -> . STATIC
    (22) type_specifier -> . CONST
    (23) type_specifier -> . TBOOL
    (24) type_specifier -> . FBOOL
    (25) type_specifier -> . VOID

    $end            reduce using rule 1 (program -> declaration_list .)
    ID              shift and go to state 10
    STATIC          shift and go to state 3
    CONST           shift and go to state 1
    TBOOL           shift and go to state 8
    FBOOL           shift and go to state 4
    VOID            shift and go to state 2

    type_specifier                 shift and go to state 5
    fun_declaration                shift and go to state 12
    var_declaration                shift and go to state 6
    declaration                    shift and go to state 19

state 12

    (5) declaration -> fun_declaration .

    ID              reduce using rule 5 (declaration -> fun_declaration .)
    STATIC          reduce using rule 5 (declaration -> fun_declaration .)
    CONST           reduce using rule 5 (declaration -> fun_declaration .)
    TBOOL           reduce using rule 5 (declaration -> fun_declaration .)
    FBOOL           reduce using rule 5 (declaration -> fun_declaration .)
    VOID            reduce using rule 5 (declaration -> fun_declaration .)
    $end            reduce using rule 5 (declaration -> fun_declaration .)


state 13

    (6) var_declaration -> type_specifier var_declaration2 . SEMICOLON

    SEMICOLON       shift and go to state 20


state 14

    (16) var_declaration2 -> COMMA .

    SEMICOLON       reduce using rule 16 (var_declaration2 -> COMMA .)


state 15

    (12) var_declaration2 -> TIMES . ID COMMA var_declaration2
    (13) var_declaration2 -> TIMES . ID
    (17) var_declaration2 -> TIMES . TIMES ID
    (18) var_declaration2 -> TIMES . TIMES ID COMMA var_declaration2

    ID              shift and go to state 21
    TIMES           shift and go to state 22


state 16

    (7) var_declaration -> type_specifier ID . LBRACKET NUMBER RBRACKET SEMICOLON
    (38) fun_declaration -> type_specifier ID . LPAREN params RPAREN compount_stmt
    (8) var_declaration2 -> ID . COMMA var_declaration2
    (9) var_declaration2 -> ID .
    (10) var_declaration2 -> ID . ASSIGNMENT NUMBER COMMA var_declaration2
    (11) var_declaration2 -> ID . ASSIGNMENT NUMBER
    (14) var_declaration2 -> ID . ASSIGNMENT ID COMMA var_declaration2
    (15) var_declaration2 -> ID . ASSIGNMENT ID

    LBRACKET        shift and go to state 24
    LPAREN          shift and go to state 25
    COMMA           shift and go to state 26
    SEMICOLON       reduce using rule 9 (var_declaration2 -> ID .)
    ASSIGNMENT      shift and go to state 23


state 17

    (19) var_declaration2 -> AMPERSANT . ID
    (20) var_declaration2 -> AMPERSANT . ID COMMA var_declaration2

    ID              shift and go to state 27


state 18

    (39) fun_declaration -> ID LPAREN . params non_type_specifier RPAREN compount_stmt
    (40) params -> . param_list
    (41) params -> . VOID
    (42) param_list -> . param_list COMMA param
    (43) param_list -> . param
    (44) param_list -> . empty
    (45) param -> . type_specifier ID
    (46) param -> . type_specifier ID LBRACKET RBRACKET
    (102) empty -> .
    (21) type_specifier -> . STATIC
    (22) type_specifier -> . CONST
    (23) type_specifier -> . TBOOL
    (24) type_specifier -> . FBOOL
    (25) type_specifier -> . VOID

    VOID            shift and go to state 30
    COMMA           reduce using rule 102 (empty -> .)
    ECHO            reduce using rule 102 (empty -> .)
    GLOBAL          reduce using rule 102 (empty -> .)
    PRINT           reduce using rule 102 (empty -> .)
    STRLEN          reduce using rule 102 (empty -> .)
    FUNCTION        reduce using rule 102 (empty -> .)
    NULL            reduce using rule 102 (empty -> .)
    SUBSTR          reduce using rule 102 (empty -> .)
    STRTOUPPER      reduce using rule 102 (empty -> .)
    STRTOLOWER      reduce using rule 102 (empty -> .)
    STRPOS          reduce using rule 102 (empty -> .)
    PHP             reduce using rule 102 (empty -> .)
    RETURN          reduce using rule 102 (empty -> .)
    STATIC          shift and go to state 3
    CONST           shift and go to state 1
    TBOOL           shift and go to state 8
    FBOOL           shift and go to state 4

    type_specifier                 shift and go to state 28
    param_list                     shift and go to state 29
    param                          shift and go to state 31
    params                         shift and go to state 32
    empty                          shift and go to state 33

state 19

    (2) declaration_list -> declaration_list declaration .

    ID              reduce using rule 2 (declaration_list -> declaration_list declaration .)
    STATIC          reduce using rule 2 (declaration_list -> declaration_list declaration .)
    CONST           reduce using rule 2 (declaration_list -> declaration_list declaration .)
    TBOOL           reduce using rule 2 (declaration_list -> declaration_list declaration .)
    FBOOL           reduce using rule 2 (declaration_list -> declaration_list declaration .)
    VOID            reduce using rule 2 (declaration_list -> declaration_list declaration .)
    $end            reduce using rule 2 (declaration_list -> declaration_list declaration .)


state 20

    (6) var_declaration -> type_specifier var_declaration2 SEMICOLON .

    ID              reduce using rule 6 (var_declaration -> type_specifier var_declaration2 SEMICOLON .)
    STATIC          reduce using rule 6 (var_declaration -> type_specifier var_declaration2 SEMICOLON .)
    CONST           reduce using rule 6 (var_declaration -> type_specifier var_declaration2 SEMICOLON .)
    TBOOL           reduce using rule 6 (var_declaration -> type_specifier var_declaration2 SEMICOLON .)
    FBOOL           reduce using rule 6 (var_declaration -> type_specifier var_declaration2 SEMICOLON .)
    VOID            reduce using rule 6 (var_declaration -> type_specifier var_declaration2 SEMICOLON .)
    $end            reduce using rule 6 (var_declaration -> type_specifier var_declaration2 SEMICOLON .)
    RPAREN          reduce using rule 6 (var_declaration -> type_specifier var_declaration2 SEMICOLON .)
    RBLOCK          reduce using rule 6 (var_declaration -> type_specifier var_declaration2 SEMICOLON .)
    SEMICOLON       reduce using rule 6 (var_declaration -> type_specifier var_declaration2 SEMICOLON .)
    LBLOCK          reduce using rule 6 (var_declaration -> type_specifier var_declaration2 SEMICOLON .)
    IF              reduce using rule 6 (var_declaration -> type_specifier var_declaration2 SEMICOLON .)
    SWITCH          reduce using rule 6 (var_declaration -> type_specifier var_declaration2 SEMICOLON .)
    CASE            reduce using rule 6 (var_declaration -> type_specifier var_declaration2 SEMICOLON .)
    DEFAULT         reduce using rule 6 (var_declaration -> type_specifier var_declaration2 SEMICOLON .)
    FOR             reduce using rule 6 (var_declaration -> type_specifier var_declaration2 SEMICOLON .)
    FOREACH         reduce using rule 6 (var_declaration -> type_specifier var_declaration2 SEMICOLON .)
    RETURN          reduce using rule 6 (var_declaration -> type_specifier var_declaration2 SEMICOLON .)
    LPAREN          reduce using rule 6 (var_declaration -> type_specifier var_declaration2 SEMICOLON .)
    NUMBER          reduce using rule 6 (var_declaration -> type_specifier var_declaration2 SEMICOLON .)


state 21

    (12) var_declaration2 -> TIMES ID . COMMA var_declaration2
    (13) var_declaration2 -> TIMES ID .

    COMMA           shift and go to state 34
    SEMICOLON       reduce using rule 13 (var_declaration2 -> TIMES ID .)


state 22

    (17) var_declaration2 -> TIMES TIMES . ID
    (18) var_declaration2 -> TIMES TIMES . ID COMMA var_declaration2

    ID              shift and go to state 35


state 23

    (10) var_declaration2 -> ID ASSIGNMENT . NUMBER COMMA var_declaration2
    (11) var_declaration2 -> ID ASSIGNMENT . NUMBER
    (14) var_declaration2 -> ID ASSIGNMENT . ID COMMA var_declaration2
    (15) var_declaration2 -> ID ASSIGNMENT . ID

    NUMBER          shift and go to state 37
    ID              shift and go to state 36


state 24

    (7) var_declaration -> type_specifier ID LBRACKET . NUMBER RBRACKET SEMICOLON

    NUMBER          shift and go to state 38


state 25

    (38) fun_declaration -> type_specifier ID LPAREN . params RPAREN compount_stmt
    (40) params -> . param_list
    (41) params -> . VOID
    (42) param_list -> . param_list COMMA param
    (43) param_list -> . param
    (44) param_list -> . empty
    (45) param -> . type_specifier ID
    (46) param -> . type_specifier ID LBRACKET RBRACKET
    (102) empty -> .
    (21) type_specifier -> . STATIC
    (22) type_specifier -> . CONST
    (23) type_specifier -> . TBOOL
    (24) type_specifier -> . FBOOL
    (25) type_specifier -> . VOID

    VOID            shift and go to state 30
    COMMA           reduce using rule 102 (empty -> .)
    RPAREN          reduce using rule 102 (empty -> .)
    STATIC          shift and go to state 3
    CONST           shift and go to state 1
    TBOOL           shift and go to state 8
    FBOOL           shift and go to state 4

    type_specifier                 shift and go to state 28
    param_list                     shift and go to state 29
    param                          shift and go to state 31
    params                         shift and go to state 39
    empty                          shift and go to state 33

state 26

    (8) var_declaration2 -> ID COMMA . var_declaration2
    (8) var_declaration2 -> . ID COMMA var_declaration2
    (9) var_declaration2 -> . ID
    (10) var_declaration2 -> . ID ASSIGNMENT NUMBER COMMA var_declaration2
    (11) var_declaration2 -> . ID ASSIGNMENT NUMBER
    (12) var_declaration2 -> . TIMES ID COMMA var_declaration2
    (13) var_declaration2 -> . TIMES ID
    (14) var_declaration2 -> . ID ASSIGNMENT ID COMMA var_declaration2
    (15) var_declaration2 -> . ID ASSIGNMENT ID
    (16) var_declaration2 -> . COMMA
    (17) var_declaration2 -> . TIMES TIMES ID
    (18) var_declaration2 -> . TIMES TIMES ID COMMA var_declaration2
    (19) var_declaration2 -> . AMPERSANT ID
    (20) var_declaration2 -> . AMPERSANT ID COMMA var_declaration2

    ID              shift and go to state 41
    TIMES           shift and go to state 15
    COMMA           shift and go to state 14
    AMPERSANT       shift and go to state 17

    var_declaration2               shift and go to state 40

state 27

    (19) var_declaration2 -> AMPERSANT ID .
    (20) var_declaration2 -> AMPERSANT ID . COMMA var_declaration2

    SEMICOLON       reduce using rule 19 (var_declaration2 -> AMPERSANT ID .)
    COMMA           shift and go to state 42


state 28

    (45) param -> type_specifier . ID
    (46) param -> type_specifier . ID LBRACKET RBRACKET

    ID              shift and go to state 43


state 29
